<?xml version="1.0"?>
<package format="2">
  <name>flexiv_bringup</name>
  <version>0.7.0</version>
  <description>Package with launch files and run-time configurations for Flexiv robots with `ros_control`</description>
  <author email="munseng.phoon@flexiv.com">Mun Seng Phoon</author>
  <maintainer email="munseng.phoon@flexiv.com">Mun Seng Phoon</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flexiv_description</exec_depend>
  <exec_depend>flexiv_hardware</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
