<?xml version="1.0"?>
<package format="2">
  <name>flexiv_msgs</name>
  <version>0.7.0</version>
  <description>Robot states messages definiton used in RDK</description>
  <author email="munseng.phoon@flexiv.com">Mun Seng Phoon</author>
  <maintainer email="munseng.phoon@flexiv.com">Mun Seng Phoon</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
